# adventofcode

./: .gitignore  Cargo.toml
2022/: .gitignore  Cargo.toml
2022/input/test/: day1  day2  day3  day4  day5  day6
2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
input/2022/: day11
lib/: Cargo.toml
lib/src/: graph.rs  lib.rs  span.rs  utils.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  main.rs  tree.rs
src/utils/: macros.rs  network.rs  solution.rs
src/year2022/: #day17.rs#  .#day16.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/year2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  mod.rs
src/year2025/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  mod.rs
templates/: day.rs
templates/year/: mod.rs
