[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true
path = "src/utils/macros.rs"

[dependencies]
lazy_static = "1"
clap = { version = "4.4.7", features = ["derive"] }
nom = "7.1.3"
pathfinding = "4.3.3"
quote = "1.0.33"
proc-macro2 = "1.0.70"
syn = { version = "2.0.39", features = ["full"] }
