[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dotenv = "0.15.0"
inventory = "0.3.21"
itertools = "0.14.0"
lib = { path = "./lib" }
macros = { path = "./macros" }
nom = "8.0.0"
pathfinding = "4.14.0"
reqwest = { version = "0.12.24", features = ["blocking", "cookies"] }
